--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 *::after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    box-sizing: border-box; 
 }
 
 :focus,
@@ -26,7 +27,50 @@ aside {
     display: block;
 }
 
+@font-face {
+    font-family: 'Open Sans';
+    src: url('/fonts/OpenSans_SemiCondensed-Bold.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'Open Sans';
+    src: url('./fonts/OpenSans_Condensed-Regular.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+  }
+
 html,
+
+
+
+.wrapper {
+    max-width: 1440px;
+    margin: 0 auto; /* Центрирование по горизонтали */
+    background-color: #f2f2f2; /* Тот же цвет, что и у фона */
+    padding: 20px;
+  }
+
+/* Пример отзывчивости через breakpoints */
+@media (max-width: 1200px) {
+    .wrapper {
+      padding: 15px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .wrapper {
+      padding: 10px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .wrapper {
+      padding: 5px;
+    }
+  }
+
 body {
     height: 100%;
     width: 100%;
@@ -42,7 +86,7 @@ body {
 input,
 button,
 textarea {
-    font-family: inherit;
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
 }
 
 input::-ms-clear {
@@ -91,7 +135,9 @@ h6 {
 }
 
 input[type='number'] {
-    -moz-appearance: textfield;
+    -webkit-appearance: textfield;  /* Для Chrome, Safari, новые Edge */
+  -moz-appearance: textfield;     /* Для Firefox */
+  appearance: textfield;          /* Стандартное свойство */
 }
 
 input::-webkit-outer-spin-button,
@@ -102,15 +148,8 @@ input::-webkit-inner-spin-button {
 body {
     text-align: center;
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+     font-family: 'Open Sans', 'Helvetica', sans-serif;
     margin: 0 auto;
-}
-
-.wrapper {
-  max-width: 1440px;
-  margin: 0 auto; /* Центрирование по горизонтали */
-  background-color: #f2f2f2; /* Тот же цвет, что и у фона */
-  padding: 20px;
 }
 
 header a {
@@ -319,6 +358,76 @@ header button {
     height: 100%;
 }
 
+.slider-container {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+  }
+  
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 0.7s ease;
+    text-align: left;
+    padding-left: 5%;
+  }
+  
+ 
+
+  .slide.active {
+    opacity: 1;
+    z-index: 1;
+  }
+  
+  .slide:nth-child(1) {
+    width: 100%;
+    height: 100%;
+    color: #FFFFFF;
+    background-image: url(./img/fon.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-left: 20%;
+    padding-top: 5%;
+  }
+
+  .slide:nth-child(2) {
+    background-image: url(./img/fon2.png); /* Замените на другое изображение */
+  }
+
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border: none;
+    border-radius: 3px;
+    user-select: none;
+    z-index: 2;
+  }
+  
+  .prev {
+    left: 10px;
+  }
+  
+  .next {
+    right: 10px;
+  }
+  
+  .prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+
 .justFoto {
     width: 100%;
     height: 100%;
@@ -331,6 +440,11 @@ header button {
     padding-left: 20%;
     padding-top: 5%;
 }
+
+.justFoto.active {
+    opacity: 1;
+    z-index: 1;
+  }
 
 @media screen and (min-width: 700px) and (max-width: 1000px) {
     .justFoto {
@@ -370,7 +484,7 @@ header button {
     }
 }
 
-.justFoto h1 {
+.slide h1 {
     font-style: normal;
     font-weight: 700;
     font-size: 96px;
@@ -379,7 +493,7 @@ header button {
 
 
 @media screen and (min-width: 700px) and (max-width: 1000px) {
-    .justFoto h1 {
+    .slide h1 {
         font-style: normal;
         font-weight: 700;
         font-size: 70px;
@@ -388,7 +502,7 @@ header button {
 }
 
 @media screen and (min-width: 400px) and (max-width: 699px) {
-    .justFoto h1 {
+    .slide h1 {
         font-style: normal;
         font-weight: 700;
         font-size: 50px;
@@ -397,7 +511,7 @@ header button {
 }
 
 @media screen and (min-width: 300px) and (max-width: 399px) {
-    .justFoto h1 {
+    .slide h1 {
         font-style: normal;
         font-weight: 500;
         font-size: 35px;
@@ -407,7 +521,7 @@ header button {
 
 
 
-.justFoto h2 {
+.slide h2 {
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
@@ -415,7 +529,7 @@ header button {
 }
 
 @media screen and (min-width: 700px) and (max-width: 1000px) {
-    .justFoto h2 {
+    .slide h2 {
         font-style: normal;
         font-weight: 700;
         font-size: 25px;
@@ -424,7 +538,7 @@ header button {
 }
 
 @media screen and (min-width: 400px) and (max-width: 699px) {
-    .justFoto h2 {
+    .slide h2 {
         font-style: normal;
         font-weight: 700;
         font-size: 20px;
@@ -433,7 +547,7 @@ header button {
 }
 
 @media screen and (min-width: 300px) and (max-width: 399px) {
-    .justFoto h2 {
+    .slide h2 {
         font-style: normal;
         font-weight: 700;
         font-size: 15px;
@@ -2220,7 +2334,7 @@ nav ul.mainList li:last-of-type {
 
 nav ul.mainList li a {
     color: #ffffff;
-    font-family: "Raleway", sans-serif;
+ font-family: 'Open Sans', 'Helvetica', sans-serif;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.5rem;
@@ -2258,7 +2372,7 @@ nav .about {
 
 nav .about p {
     color: #ffffff;
-    font-family: "Spectral", serif;
+ font-family: 'Open Sans', 'Helvetica', sans-serif;
     font-size: 1.05rem;
     letter-spacing: 0.5px;
     line-height: 170%;
@@ -2345,7 +2459,7 @@ nav ul.sub li:last-of-type {
 
 nav ul.sub li a {
     color: #ffffff;
-    font-family: "Raleway", sans-serif;
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
     letter-spacing: 1px;
     font-size: 0.9rem;
     text-decoration: none;
