--- a/style.css
+++ b/style.css
@@ -436,31 +436,12 @@ header button {
   }
   
 
-.justFoto {
-    width: 100%;
-    height: 100%;
-    color: #FFFFFF;
-    text-align: left;
-    background-image: url(./img/fon.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    padding-left: 20%;
-    padding-top: 5%;
-}
-
-.justFoto.active {
-    opacity: 1;
-    z-index: 1;
-  }
-
 @media screen and (min-width: 700px) and (max-width: 1000px) {
-    .justFoto {
+    .slide {
         width: 100%;
         height: 100%;
         color: #FFFFFF;
         text-align: left;
-        background-image: url(./img/fon.png);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -470,12 +451,12 @@ header button {
 }
 
 @media screen and (min-width: 400px) and (max-width: 699px) {
-    .justFoto {
+    .slide {
         width: 100%;
         height: 100%;
         color: #FFFFFF;
         text-align: left;
-        background-image: url(./img/fon.png);
+        
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -486,7 +467,7 @@ header button {
 }
 
 @media screen and (min-width: 300px) and (max-width: 400px) {
-    .justFoto {
+    .slide {
         width: 100%;
         height: 100%;
     }
