--- a/style.css
+++ b/style.css
@@ -448,6 +448,30 @@ header button {
         padding-left: 15%;
         padding-top: 10%;
     }
+
+    .slide:nth-child(1) {
+        width: 100%;
+        height: 100%;
+        color: #FFFFFF;
+        background-image: url(./img/fon.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding-left: 15%;
+        padding-top: 10%;
+      }
+    
+      .slide:nth-child(2) {
+        width: 100%;
+        height: 100%;
+        color: #FFFFFF;
+        background-image: url(./img/fon2.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding-left: 15%;
+        padding-top: 10%;
+      }
 }
 
 @media screen and (min-width: 400px) and (max-width: 699px) {
@@ -456,7 +480,6 @@ header button {
         height: 100%;
         color: #FFFFFF;
         text-align: left;
-        
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -464,6 +487,30 @@ header button {
         padding-top: 15%;
         text-align: left;
     }
+
+    .slide:nth-child(1) {
+        width: 100%;
+        height: 100%;
+        color: #FFFFFF;
+        background-image: url(./img/fon.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding-left: 20%;
+        padding-top: 5%;
+      }
+    
+      .slide:nth-child(2) {
+        width: 100%;
+        height: 100%;
+        color: #FFFFFF;
+        background-image: url(./img/fon2.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding-left: 25%;
+        padding-top: 15%;
+      }
 }
 
 @media screen and (min-width: 300px) and (max-width: 400px) {
